update styles and jello.js

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,7 +1,7 @@
 :root {
-  --theme-color: #14ffad;
+  --theme-color: #8101d6;
   --accent-color: #ff6e14;
-  --tint-color: #ecfcf9;
+  --tint-color: #f2e8ff;
 }
 
 ::selection{
